2002-07-21  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* Release 0.1.

	* mi-fontify.el (mode-info-fontify-node): Make info buffer as
	unmodified at the end of fontify process.

	* mi-util.el (line-beginning-position): Defined to avoid
	byte-compile warning in XEmacs.

	* mi-emacs.el (toplevel): Require `mi-config'.
	(function-document, variable-document): Use
	`mode-info-with-help-buffer'.
	(mode-info-emacs-add-function-button): Use
	`mode-info-elisp-insert-button'.
	(mode-info-emacs-add-variable-button): Ditto.

	* mi-elisp.el (toplevel): Require `mi-config'.
	(function-document, variable-document): Use
	`mode-info-with-help-buffer'.
	(mode-info-elisp-insert-button): New function.
	(mode-info-elisp-add-function-button): Use the above function.
	(mode-info-elisp-add-variable-button): Ditto.
	(mode-info-elisp-info-ref): New function.

	* mi-config.el (toplevel): Add autoload for
	'mode-info-elisp-info-ref'.
	(mode-info-advise-describe-commands): New option.
	(mode-info-elisp-add-function-button): Refer the above option.
	(mode-info-elisp-add-variable-button): Ditto.
	(mode-info-key-or-menu-binding): New function.
	(mode-info-elisp-add-command-button): Use the above function and
	refer the above option.
	(mode-info-advise-info-commands): Renamed from
	`mode-info-emacs-command-node'.
	(mode-info-emacs-command-node): Follow the above renaming.
	(mode-info-elisp-info-ref): New advise.

2002-07-20  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* mi-util.el (mode-info-static-if): Add edebug form spec.

	* mi-config.el (mode-info-elisp-add-command-button): Advised for
	only FSF Emacs.

	* mode-info.el (mode-info-default-class): New option.
	(mode-info-new): Argument spec is changed.  Refer
	`mode-info-default-class'.
	(read-tag): Print the class name in prompt.
	(mode-info-find-tag): Reimplemented.

	* mi-index.el (mode-info-search-info-files): Check whether
	directory exists before `directory-files' is called.